assets/main.css
/* ... */
.extra .subject-info {
  display: none;
}
.site-links {
  flex-grow: 1;
  text-align: right;
  display: flex;
  flex-flow: column nowrap;
  margin-bottom: 1.25rem;
}
.site-links > * + * {
  margin-top: 1.25rem;
}
.site-links ul {
  list-style: none;
  padding: 0;
  margin: 0;
  position: static;
  color: var(--aomori-primary-color-hex);
}
.site-links a {
  transition: color 0.2s linear;
}
.site-nav {
  flex-grow: 1;
}
.site-links a {
  color: var(--aomori-primary-color-hex);
  transition: color linear 0.1s;
}
.site-links a:hover,
.site-links a:active {
  color: var(--primary-color-hex);
}
.site-nav a:active::before,
.site-nav a:hover::before {
  content: "\2023";
  display: inline;
  margin-right: 0.5em;
}
.site-nav_button,
.site-nav_close {
  display: none;
  align-items: center;
  justify-content: center;
}
.site-nav button svg {
  width: 16px;
  height: 16px;
  fill: currentColor;
  stroke: currentColor;
  pointer-events: none;
  user-select: none;
}
.site-nav_list {
  position: relative;
}
.site-nav_dropdown {
  display: block;
  padding: 0;
  margin: 0;
  list-style: none;
}
.site-nav_dropdown li + li {
  margin-top: min(45px, 4vh);
}
.site-nav_mask,
.site-nav_close {
  display: none;
}
.site-links button {
  border: 1px solid currentColor;
  background: none;
  color: var(--aomori-primary-color-hex);
  border-radius: 3px;
  padding: 0.5em;
  cursor: pointer;
  transition: color linear 0.1s, background linear 0.1s;
}
.site-links button:hover,
.site-links button:active {
  color: var(--primary-color-hex);
  background-color: rgba(var(--primary-color-rgb), 0.1);
}
.site-podcast ul {
  display: flex;
}
.site-podcast .icon,
.js-search,
.site-social .icon {
  padding: 0.5em;
}
.site-podcast li + li,
.site-social a + a {
  margin-left: 1.5em;
}
.site-subscribe .js-subscribe {
  padding: 0.5em 1em;
}
.scroll-indicator {
  position: absolute;
  bottom: 10px;
  left: 50%;
  transform: translateX(-50%);
  width: 16px;
  fill: var(--aomori-meta-color-hex);
  user-select: none;
}
#scroller {
  animation: slide 1s ease-in forwards 5;
}
.featured {
  width: 100vw;
  position: relative;
}
.featured-inner {
  overflow-x: scroll;
  overflow-y: hidden;
  scroll-behavior: smooth;
  scroll-snap-type: mandatory;
  scroll-snap-points-y: repeat(100vw);
  scroll-snap-type: x mandatory;
  width: inherit;
  height: inherit;
}
.featured-slider {
  display: flex;
  flex-flow: row nowrap;
  width: inherit;
  height: inherit;
}
.featured-nav button {
  width: 3rem;
  height: 3rem;
  border: 0;
  border-radius: 50%;
  background-color: rgba(var(--aomori-opac-mask-rgb), 0.3);
  color: var(--aomori-light-hex);
  cursor: pointer;
  transition: background-color 0.2s linear;
  visibility: visible;
  opacity: 1;
  position: absolute;
  z-index: 2;
  top: 50%;
  transform: translateY(-50%);
}
.featured-nav button:disabled {
  visibility: hidden;
  opacity: 0;
}
.featured-nav button:hover,
.featured-nav button:active {
  background-color: rgba(var(--aomori-opac-mask-rgb), 0.8);
}
#prev {
  left: 5%;
}
#next {
  right: 5%;
}
.hero-wrap {
  scroll-snap-align: start;
  scroll-snap-stop: always;
  width: inherit;
  height: inherit;
  flex-shrink: 0;
}
.hero {
  display: flex;
  flex-flow: column nowrap;
  max-width: 1280px;
  padding: var(--aomori-padding-md);
  box-sizing: border-box;
  margin: 0 auto;
  width: inherit;
  height: inherit;
}
.hero a,
.hero a:visited {
  transition: color .2s linear;
}
.hero a:active,
.hero a:hover {
  color: var(----primary-color-hex);
}
.hero.horizontal {
  padding-bottom: min(56px,max(var(--aomori-padding-sm), 4vh));
  padding-bottom: clamp(var(--aomori-padding-sm), 4vh, 56px);
}
.hero-cover {
  display: block;
  background: center / cover #eeeeee no-repeat;
  flex-shrink: 0;
  width: 100%;
  height: 60vh;
  flex: 1 1 60%;
}
.hero-info {
  margin: 2rem 0 0;
  flex: 1 1 40%;
  display: flex;
  flex-flow: column nowrap;
}
.hero-tags a {
  font-size: .96em;
  color: var(--aomori-meta-color-hex);
  margin-right: .5rem;
}
.hero-tags a:before {
  content: "#";
  color: rgba(var(--aomori-opac-mask-rgb), 0.1);
  margin-right: 1px;
  font-weight: 900;
}
.hero-headline {
  flex: 1 1 auto;
}
.hero-headline h2 {
  margin: 1rem 0;
  font-size: 3em;
  line-height: 1.15;
  font-weight: 700;
  text-transform: uppercase;
  color: var(--aomori-primary-color-hex);
  padding: 2rem 0;
  border-top: 1rem solid currentColor;
}
.has-cover .hero-headline h2 {
  font-size: min(3em, max(1.5em, 48 /1280 * 100vw));
  font-size: clamp(1.5em, 48 / 1280 * 100vw, 3em);
  padding: 0;
  border: 0;
}
.hero-headline a {
  display: inline-block;
}
.hero-headline h3 {
  font-size: 1.5em;
  font-weight: 400;
  color: var(--aomori-secondary-color-hex);
}
.has-cover .hero-headline h3 {
  font-size: 1.25em;
  color: var(--aomori-primary-color-hex);
}
.hero-meta {
  color: var(--aomori-meta-color-hex);
  overflow: auto;
  font-size: 1rem;
}
.hero-meta::before,
.hero-meta::after {
  content: "";
  display: block;
  clear: both;
}
.hero-authors {
  float: left;
}
.hero-time {
  float: right;
}
.section.extra {
  position: relative;
  height: auto;
  scroll-margin-bottom: 20vh;
}
.side-mark {
  font-weight: 700;
  text-transform: uppercase;
  font-size: 1em;
  position: absolute;
  right: var(--aomori-padding-sm);
  top: var(--aomori-padding-sm);
  margin: 0;
}
.landing .side-mark {
  display: none;
}
.side-mark a {
  display: inline-flex;
  align-items: center;
}
.side-mark .avatar {
  width: 24px;
  height: 24px;
  margin-right: 0.25em;
}
.subject-list_inner {
  padding-bottom: 3.75em;
}
.subject-list ul {
  list-style: none;
  padding: 0;
  max-width: 680px;
  margin: 0 auto 0 0;
}
.subject-item {
  display: flex;
  flex-flow: row nowrap;
}
.subject-item + .subject-item {
  margin-top: 3.75em;
}
.subject-item_cover {
  width: 100px;
  height: 100px;
  object-fit: cover;
  margin-right: 1.5em;
}
.subject-item_main {
  display: flex;
  flex-flow: column nowrap;
  overflow: hidden;
}
/* ... */

